--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -15,7 +15,24 @@ a {
 }
 
 * {
-  box-sizing: border-box;
+  	box-sizing: border-box;
+	scroll-behavior: smooth;
+  	scrollbar-width: auto;
+	scrollbar-color: #4D6360 #302d35;
+	
+	&::-webkit-scrollbar {
+		width: 16px;
+	}
+
+	&::-webkit-scrollbar-track {	
+		background: #302d35;
+	}
+	
+	&::-webkit-scrollbar-thumb {
+		background-color: #4D6360;
+		border-radius: 16px;
+		border: 3px solid #302d35;
+	}
 }
 
 @tailwind base;
