refactor: migrate HomePage & ContactPage to GraphCMS usage instead of Forestry

--- a/styles/Contact.module.scss
+++ b/styles/Contact.module.scss
@@ -111,7 +111,7 @@
 
 
 .image {
-	@apply absolute left-24 top-0 w-[240px] aspect-square;
+	@apply absolute left-24 top-0 w-[240px] aspect-square select-none;
 
 	@include to('lg') {
 		@apply w-[140px] top-4;
