--- a/styles/Timeline.module.scss
+++ b/styles/Timeline.module.scss
@@ -93,10 +93,10 @@
 }
 
 .text_left {
-	@apply text-kapala-20 font-thin text-base absolute right-[55%];
+	@apply text-kapala-20 font-thin text-base absolute right-[55%] grid grid-cols-1 pt-2;
 
 	@include to('sm') {
-		@apply left-[10%] w-24 text-sm
+		@apply left-[10%] w-24 text-sm pt-0
 	}
 
 	@media(max-width: 480px) {
